base/appdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srt-appgateway-dep
  namespace: srt-appinfra-ns
spec:
  replicas: 1 # Set the number of desired replicas
  selector:
    matchLabels:
      app: srt-appgateway
  template:
    metadata:
      labels:
        app: srt-appgateway
    spec:
      containers:
        - name: srt-appgateway-container
          image: srtserver.azurecr.io/srtappgateway:integration_10_dev
          ports:
            - containerPort: 3000 # Set the port your application listens on
      imagePullSecrets:
        - name: azure-kv-ext-secret
          namespace: srt-appinfra-ns
