base/infradeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srt-infraapi-dep
  namespace: srt-appinfra-ns
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: srt-infraapi
  template:
    metadata:
      labels:
        app: srt-infraapi
    spec:
      serviceAccountName: config-reader-sa
      containers:
        - name: srt-infraapi-container
          image: jenkinspipeline12/srtinfra:v4
          ports:
            - containerPort: 8080 # Set the port your application listens on
