base/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: srtappsvc
  namespace: srtappinfra
spec:
  selector:
    app: srtinfragin # Should match the labels in your Deployment
  ports:
    - protocol: TCP
      port: 3000 # The port on which your service will be accessible
      targetPort: 3000 # The port your application listens on
  type: ClusterIP
