base/infraservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: srt-infraapi-svc
  namespace: srt-appinfra-ns
spec:
  selector:
    app: srt-infraapi # Should match the labels in your Deployment
  ports:
    - protocol: TCP
      port: 8000 # The port on which your service will be accessible
      targetPort: 8080 # The port your application listens on
  type: ClusterIP
